--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
       "dependencies": {
             "@reduxjs/toolkit": "^2.5.1",
             "axios": "^1.7.9",
+            "locomotive-scroll": "^5.0.0-beta.21",
             "motion": "^12.4.1",
             "react": "^18.3.1",
             "react-dom": "^18.3.1",
