--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
             "react-infinite-scroll-component": "^6.1.0",
             "react-player": "^2.16.0",
             "react-redux": "^9.2.0",
-            "react-router-dom": "^7.0.2"
+            "react-router-dom": "^7.0.2",
+            "styled-components": "^6.1.15"
       },
       "devDependencies": {
             "@eslint/js": "^9.15.0",
