--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
+    "caniuse-lite": "^1.0.30001716",
     "flowbite-react": "^0.11.7",
+    "framer-motion": "^11.18.2",
     "locomotive-scroll": "^5.0.0-beta.21",
     "motion": "^12.4.1",
     "react": "^18.3.1",
