--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
       },
       "dependencies": {
             "@reduxjs/toolkit": "^2.5.1",
+            "@vercel/speed-insights": "^1.2.0",
             "axios": "^1.7.9",
             "caniuse-lite": "^1.0.30001716",
             "flowbite-react": "^0.11.7",
