--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
       "name": "moviereview",
       "private": true,
-      "version": "0.1.0",
+      "version": "2.0",
       "type": "module",
       "scripts": {
             "dev": "vite",
@@ -12,6 +12,7 @@
       },
       "dependencies": {
             "@reduxjs/toolkit": "^2.5.1",
+            "@vercel/analytics": "^1.6.0",
             "@vercel/speed-insights": "^1.2.0",
             "axios": "^1.7.9",
             "flowbite-react": "^0.11.7",
