--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
       "private": true,
       "version": "2.0",
       "type": "module",
+      "author": "Ahmad",
       "scripts": {
             "dev": "vite",
             "build": "vite build",
@@ -40,6 +41,9 @@
             "globals": "^15.12.0",
             "postcss": "^8.4.49",
             "tailwindcss": "^3.4.16",
-            "vite": "^6.0.1"
+            "vite": "npm:rolldown-vite@7.2.5"
+      },
+      "overrides": {
+            "vite": "npm:rolldown-vite@7.2.5"
       }
 }
