--- a/package.json
+++ b/package.json
@@ -41,9 +41,6 @@
             "globals": "^15.12.0",
             "postcss": "^8.4.49",
             "tailwindcss": "^3.4.16",
-            "vite": "npm:rolldown-vite@7.2.5"
-      },
-      "overrides": {
-            "vite": "npm:rolldown-vite@7.2.5"
+            "vite": "^6.0.1"
       }
 }
