--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,7 +11,7 @@
             },
             {
                   "src": "/appicon-628-631.png",
-                  "sizes": "512x512",
+                  "sizes": "628x631",
                   "type": "image/png",
                   "purpose": "any"
             },
@@ -38,6 +38,6 @@
       ],
       "start_url": ".",
       "display": "fullscreen",
-      "theme_color": "#1a1a1a",
-      "background_color": "#1a1a1a"
+      "theme_color": "#f6f6f6",
+      "background_color": "#f6f6f6"
 }
