--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,19 +4,19 @@
       "description": "Stream the latest movies and TV shows directly from your browser with offline support.",
       "icons": [
             {
-                  "src": "/appicon-192-192.png",
+                  "src": "/appicon-small.png",
                   "sizes": "192x192",
                   "type": "image/png",
                   "purpose": "any"
             },
             {
-                  "src": "/appicon-628-631.png",
-                  "sizes": "628x631",
+                  "src": "/appicon.png",
+                  "sizes": "600x600",
                   "type": "image/png",
                   "purpose": "any"
             },
             {
-                  "src": "/appicon-192-192.png",
+                  "src": "/appicon-small.png",
                   "sizes": "192x192",
                   "type": "image/png",
                   "purpose": "maskable"
@@ -38,6 +38,6 @@
       ],
       "start_url": ".",
       "display": "fullscreen",
-      "theme_color": "#f6f6f6",
-      "background_color": "#f6f6f6"
+      "theme_color": "#201d1d",
+      "background_color": "#201d1d"
 }
