--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-      "name": "moviereview",
+      "name": "movieflix",
       "private": true,
       "version": "2.0",
       "type": "module",
