--- a/public/manifest.json
+++ b/public/manifest.json
@@ -38,18 +38,10 @@
             }
       ],
       "start_url": "/",
-      "id": "https://themoviesflix.vercel.app",
+      "id": "/",
       "scope": "/",
       "orientation": "any",
       "display": "fullscreen",
       "theme_color": "#201d1d",
-      "background_color": "#201d1d",
-      "shortcuts": [
-            {
-                  "name": "Search",
-                  "short_name": "Search",
-                  "url": "/search",
-                  "description": "Search movies and shows"
-            }
-      ]
+      "background_color": "#201d1d"
 }
