--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
       "name": "movieflix",
       "private": true,
-      "version": "2.0",
+      "version": "2.1.0",
       "type": "module",
       "author": "Ahmad",
       "scripts": {
             "dev": "vite",
             "build": "vite build",
             "lint": "eslint .",
-            "preview": "vite preview",
-            "postinstall": "flowbite-react patch"
+            "preview": "vite preview"
       },
       "dependencies": {
             "@reduxjs/toolkit": "^2.5.1",
             "@vercel/analytics": "^1.6.0",
             "@vercel/speed-insights": "^1.2.0",
             "axios": "^1.7.9",
-            "flowbite-react": "^0.11.7",
+            "embla-carousel-autoplay": "^8.6.0",
+            "embla-carousel-react": "^8.6.0",
             "framer-motion": "^11.18.2",
             "motion": "^12.4.1",
             "react": "^18.3.1",
